--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "webpack-dev-server": "^2.9.4"
   },
   "dependencies": {
-    "p5": "^0.5.16",
-    "axios": "^0.17.1"
+    "axios": "^0.17.1",
+    "d3": "^4.12.2",
+    "p5": "^0.5.16"
   }
 }
