--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-minify-webpack-plugin": "^0.2.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "gh-pages": "^0.12.0",
     "uglifyjs-webpack-plugin": "^1.0.1",
